Fix .gitignore and add a funny image

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .governator/governator.lock
 .governator/governator.locked
+.governator/failed-merges.log
+.governator/in-flight.log
 .governator/logs/
