--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,18 @@ jobs:
             wget \
             shellcheck \
             shfmt \
-            jq
+            jq \
+            kcov
           git clone https://github.com/bats-core/bats-core.git /tmp/bats-core
           sudo /tmp/bats-core/install.sh /usr/local
       - name: Run test suite
-        run: ./scripts/all-tests.sh
+        run: COVERAGE=1 ./scripts/all-tests.sh
+      - name: Upload coverage artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: |
+            coverage/coverage.xml
+            coverage/
+          if-no-files-found: ignore
