--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          brew install jq bats-core shellcheck shfmt
+          brew install bash jq bats-core shellcheck shfmt
+          echo "$(brew --prefix)/bin" >> "$GITHUB_PATH"
       - name: Run test suite
         run: ./scripts/test.sh --fast
