--- a/_governator/templates/config.json
+++ b/_governator/templates/config.json
@@ -8,6 +8,8 @@
     "last_check": 0
   },
   "last_update_at": "never",
+  "last_update_ref": "",
+  "last_update_commit": "",
   "planning": {
     "gov_hash": ""
   },
