--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,166 +40,22 @@ jobs:
       - name: E2E tests
         run: go test -v ./test
 
-  build:
+  release:
     needs: verify
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required for GoReleaser changelog generation
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - name: Extract version
-        id: version
-        run: echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
-      - name: Build release artifacts
-        run: |
-          ./scripts/release.sh \
-            --version "${{ steps.version.outputs.version }}" \
-            --commit "${{ github.sha }}" \
-            --built-at "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
-            all
-      - uses: actions/upload-artifact@v4
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
         with:
-          name: release-artifacts
-          path: dist/
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: release-artifacts
-          path: dist/
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
-          files: |
-            dist/homebrew/*.tar.gz
-            dist/apt/*.deb
-
-  publish-apt:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: release-artifacts
-          path: dist/
-      - name: Publish to apt repository
-        run: |
-          echo "Publishing $(ls dist/apt/*.deb) to apt repository"
-          # TODO: Add apt repository publishing commands, for example:
-          #   curl --fail -X POST \
-          #     -H "Authorization: Bearer ${{ secrets.APT_REPO_TOKEN }}" \
-          #     -F "file=@dist/apt/governator_${VERSION}_amd64.deb" \
-          #     https://apt.example.com/upload
-
-  publish-homebrew:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: release-artifacts
-          path: dist/
-
-      - name: Validate homebrew artifacts exist
-        run: |
-          set -euo pipefail
-          ls -la dist/homebrew
-          test -n "$(ls -1 dist/homebrew/*.tar.gz 2>/dev/null)"
-
-      - name: Compute SHA256s
-        id: shas
-        run: |
-          set -euo pipefail
-
-          sha_for() {
-            local pat="$1"
-            local f
-            f="$(ls -1 dist/homebrew/*"${pat}"*.tar.gz 2>/dev/null | head -n 1 || true)"
-            if [[ -z "${f}" ]]; then
-              echo "Missing tarball matching: *${pat}*.tar.gz" >&2
-              exit 1
-            fi
-            sha256sum "${f}" | awk '{print $1}'
-          }
-
-          echo "darwin_arm64=$(sha_for darwin_arm64)" >> "$GITHUB_OUTPUT"
-          echo "darwin_amd64=$(sha_for darwin_amd64)" >> "$GITHUB_OUTPUT"
-          echo "linux_arm64=$(sha_for linux_arm64)"   >> "$GITHUB_OUTPUT"
-          echo "linux_amd64=$(sha_for linux_amd64)"   >> "$GITHUB_OUTPUT"
-
-      - name: Update Homebrew tap formula
+          distribution: goreleaser
+          version: latest
+          args: release --clean
         env:
-          TAP_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
-          TAG: ${{ github.ref_name }} # e.g. v1.2.3
-          SHA_DARWIN_ARM64: ${{ steps.shas.outputs.darwin_arm64 }}
-          SHA_DARWIN_AMD64: ${{ steps.shas.outputs.darwin_amd64 }}
-          SHA_LINUX_ARM64:  ${{ steps.shas.outputs.linux_arm64 }}
-          SHA_LINUX_AMD64:  ${{ steps.shas.outputs.linux_amd64 }}
-        run: |
-          set -euo pipefail
-
-          VERSION="${TAG#v}"
-          REPO_OWNER="cmtonkinson"
-          TAP_REPO="homebrew-tap"
-          FORMULA_PATH="Formula/governator.rb"
-          PROJECT_REPO="governator"
-
-          git clone "https://x-access-token:${TAP_TOKEN}@github.com/${REPO_OWNER}/${TAP_REPO}.git"
-          cd "${TAP_REPO}"
-
-          git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          mkdir -p Formula
-
-          cat > "${FORMULA_PATH}" <<'RUBY'
-          class Governator < Formula
-            desc "Governator CLI"
-            homepage "https://github.com/${REPO_OWNER}/${PROJECT_REPO}"
-            license "MIT"
-
-            version "${VERSION}"
-
-            on_macos do
-              if Hardware::CPU.arm?
-                url "https://github.com/${REPO_OWNER}/${PROJECT_REPO}/releases/download/v#{version}/governator_#{version}_darwin_arm64.tar.gz"
-                sha256 "${SHA_DARWIN_ARM64}"
-              else
-                url "https://github.com/${REPO_OWNER}/${PROJECT_REPO}/releases/download/v#{version}/governator_#{version}_darwin_amd64.tar.gz"
-                sha256 "${SHA_DARWIN_AMD64}"
-              end
-            end
-
-            on_linux do
-              if Hardware::CPU.arm?
-                url "https://github.com/${REPO_OWNER}/${PROJECT_REPO}/releases/download/v#{version}/governator_#{version}_linux_arm64.tar.gz"
-                sha256 "${SHA_LINUX_ARM64}"
-              else
-                url "https://github.com/${REPO_OWNER}/${PROJECT_REPO}/releases/download/v#{version}/governator_#{version}_linux_amd64.tar.gz"
-                sha256 "${SHA_LINUX_AMD64}"
-              end
-            end
-
-            def install
-              bin.install "governator"
-            end
-
-            test do
-              system "#{bin}/governator", "--version"
-            end
-          end
-          RUBY
-
-          git add "${FORMULA_PATH}"
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-            exit 0
-          fi
-
-          git commit -m "governator ${TAG}"
-          git push
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
