--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Vet
         run: go vet ./...
       - name: Unit tests
-        run: go test -v $(go list ./... | grep -v '/test$')
+        run: go test -v $(go list ./... | grep -v '/tests/e2e$')
       - name: E2E tests
-        run: go test -v ./test
+        run: go test -v ./tests/e2e
